# education_sw

./: README.md
ar_track_bot/: ReadMe.md
ar_track_bot/models/: ReadMe.md
ar_track_bot/models/aruco_cube/meshes/: aruco_cube_5cm.dae  aruco_cube_6cm.dae  aruco_cube_8cm.dae
ar_track_bot/turtlebot_ar_follower/: CHANGELOG.rst  CMakeLists.txt  package.xml
ar_track_bot/turtlebot_ar_follower/launch/: follower.launch  view_ar.launch
ar_track_bot/turtlebot_ar_follower/plugins/: nodelets.xml
ar_track_bot/turtlebot_ar_follower/rviz/: ar.rviz
ar_track_bot/turtlebot_ar_follower/src/: ar_follower.cpp
ar_track_bot/turtlebot_simulator/turtlebot_gazebo/launch/: ar_tracker.launch  turtlebot_ar_world.launch
ar_track_bot/turtlebot_simulator/turtlebot_gazebo/launch/includes/: kobuki.launch.xml
ar_track_bot/turtlebot_simulator/turtlebot_gazebo/worlds/: pick.world
cleanbot/: install_cleanBot.sh  run_gazebo_demo.sh
cleanbot/scripts/: change_dash_to_bash.py
six_dof_arm/: README.md
six_dof_arm/six_dof_arm_description/: CMakeLists.txt  README.md  package.xml
six_dof_arm/six_dof_arm_description/launch/: view_arm.launch
six_dof_arm/six_dof_arm_description/meshes/: wrist.stl
six_dof_arm/six_dof_arm_description/urdf/: common_config.urdf.xacro  common_properties.urdf.xacro  six_dof_arm.xacro  six_dof_arm_gazebo.urdf.xacro  six_dof_arm_transmission.urdf.xacro
six_dof_arm/six_dof_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
six_dof_arm/six_dof_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  six_dof_arm.srdf
six_dof_arm/six_dof_arm_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
speechbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
speechbot/launch/: standalone.launch
speechbot/plugins/: nodelets.xml
speechbot/src/: speechbot.cpp
vfh_local_planner/: CHANGELOG.rst  CMakeLists.txt  ReadMe.md  package.xml
vfh_local_planner/cfg/: VFHPlanner.cfg
vfh_local_planner/include/vfh_local_planner/: vfh_planner_ros.h
vfh_local_planner/param/: vfh_local_planner_params.yaml
vfh_local_planner/src/: vfh_planner_ros.cpp
