<?xml version="1.0"?>
<package>
  <name>speechbot</name>
  <version>0.0.2</version>
  <description>The speechbot package for taking speech message translate into navigation message.</description>

  <maintainer email="1271087623@qq.com">Carl</maintainer>

  <license>BSD</license>

  <author email="1271087623@qq.com">Carl</author> 


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
