<package>
  <name>turtlebot_ar_follower</name>
  <version>0.0.1</version>
  <description>
       Follower for the turtlebot. Follows AR by following the ar tarcker in front of the turtlebot.
  </description>

  <maintainer email="1271087623@qq.com">Carl Zhang</maintainer>

  <license>BSD</license>


  <author email="1271087623@qq.com">Playfish</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_teleop</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelets.xml" />
  </export>
</package>
